--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ layout: null
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
-  color: #404040;
+  color: #181C2D;
   position: relative;
   background-color: {{ site.page-col }};
   {% if site.page-img %}
@@ -325,7 +325,7 @@ footer .theme-by {
 
 .post-preview a {
   text-decoration: none;
-  color: #404040;
+  color: #181C2D;
 }
 
 .post-preview a:focus,
@@ -345,7 +345,7 @@ footer .theme-by {
 }
 .post-preview .post-meta,
 .post-heading .post-meta {
-  color: #808080;
+  color: #181C2D;
   font-size: 18px;
   font-style: italic;
   margin: 0 0 10px;
